# vnedge

./: .dockerignore  .env.example  .gitignore  .venv  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.local.json
deploy/: Caddyfile
docs/: AGENT_GATEWAY.md  AI_SANDBOX.md  ALPHA_ARENA_LITE.md  ALPHA_COUNCIL.md  ALPHA_DISTILLATION_PACK.md  ALPHA_FACTORY.md  ALPHA_STACK.md  ALPHA_WORKBENCH.md  ARCHITECTURE_FLOW.md  BITCOIN_REGIME_SENSOR.md  BOT_CAPABILITY_RADAR.md  CASCADE_REVERSION.md  CONTEXT_DATA_BACKFILL.md  CRYPTO_SIGNAL_REVIEW.md  DASHBOARD_AUTH.md  DATREND_NOMADA_SCALPER_BACKTEST_20260722.md  DEPLOY.md  DESIGN.md  EDGE_MODEL_V1_20260718.md  EDGE_ROUTER_BACKTEST_20260718.md  EXECUTION_CONDITION_MINER.md  EXECUTION_EDGE_LABELER.md  EXECUTION_REALISTIC_REPLAY_PROFILE.md  EXECUTOR_RUNTIME.md  EXTERNAL_SIGNAL_INTAKE.md  FEE_WALL_FORENSICS.md  FILTERED_REPLAY_EXECUTOR.md  FREQTRADE_DEEP_DIVE.md  GITHUB_BITCOIN_TOPIC_DEEP_DIVE.md  GITHUB_CRYPTO_TOPIC_DEEP_DIVE.md  IAF_FRAMEWORK_ADAPTATION.md  LEADLAG_ECHO_SCALP.md  LIVE_LADDER.md  LUXALGO_EDGE_EXTRACTION.md  LUXARA_BREAK_BOUNCE_V27_SCANNER.md  LUXARA_LIVE_PLAN_QTM_SCANNER.md  LUXY_UT_FORECAST_SCANNER.md  MOMENTUM_CASCADE_LYRO_SCANNER.md  OCTOBOT_ADAPTATION.md  ORDERFLOW_FOOTPRINT_MINER.md  (+24 more)
governance/: loop_gates.yaml
research/: quant_loop_state.json
scripts/: deploy.sh  scalper_fee_sweep.py
tests/: test_account_store.py  test_agent_gateway.py  test_agent_job_runner.py  test_aggtrades_backfill.py  test_ai_sandbox.py  test_alerts.py  test_alpha_stack.py  (+136 more)
(+201 files in other folders)
