[project]
name = "vnedge"
version = "0.1.0"
description = "Explainable, risk-controlled crypto F&O/perpetuals trading assistant"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "ccxt>=4.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# non-Python files that must ship in the installed package (the container
# runs from site-packages, not the repo)
vnedge = ["dashboard/static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
